# api-db-rs

./: .env.example  Cargo.toml  Dockerfile  Makefile  Readme.md  docker-compose.yml
db/: script.sql
src/: lib.rs  main.rs
src/api/: repo.rs
src/config/: api.rs  database.rs  postgres.rs
src/handler/: processor.rs  server.rs
src/model/: domain.rs  error.rs
src/repository/: database.rs  postgres.rs
